refactor: GPT API 전면 제거 및 Gemini API로 통합